fix: alignment of number of challenges in Map Title (#35130)

--- a/client/src/components/Map/map.css
+++ b/client/src/components/Map/map.css
@@ -29,7 +29,7 @@
 
 .map-title-completed {
   margin-left: auto;
-  width: 90px;
+  width: 100px;
   padding-left: 20px;
 }
 
